--- a/templates/math_test/index.html.twig
+++ b/templates/math_test/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello MathTestController!{% endblock %}
+{% block title %}Арифметический тест!{% endblock %}
 
 {% block body %}
 <style>
@@ -9,12 +9,20 @@
 </style>
 
 <div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    <h1>Пройдите тест на знание арифметики! ✅</h1>
+    <p>{{ quiz.name }}</p>
+    <p>Вам предстоит ответить на 10 вопросов. Удачи!</p>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code>/var/www/html/src/Controller/MathTestController.php</code></li>
-        <li>Your template at <code>/var/www/html/templates/math_test/index.html.twig</code></li>
-    </ul>
+        {% for question in quiz.questions %}
+            <h3>{{ question.content }}</h3>
+            <ul>
+                {% for answer in question.answers %}
+                    <li>
+                        <input type="checkbox" id="answer_{{ answer.id }}" name="answers[{{ question.id }}]" value="{{ answer.id }}">
+                        <label for="answer_{{ answer.id }}">{{ answer.content }}</label>
+                    </li>
+                {% endfor %}
+            </ul>
+        {% endfor %}
 </div>
 {% endblock %}
