--- a/templates/math_test/index.html.twig
+++ b/templates/math_test/index.html.twig
@@ -15,40 +15,15 @@
             {% for questionAnswer in question.questionAnswers %}
                 {% for resuilItemForm in form.resultItems %}
                     {% if questionAnswer.id == resuilItemForm.vars.data.questionAnswer.id %}
-                        {{ form_row(resuilItemForm.id) }}
+                        <div>
+                            {{ form_widget(resuilItemForm.checked) }}
+                            <label for="result_resultItems_{{ questionAnswer.id }}_id">{{ questionAnswer.answer.content }}</label>
+                        </div>
                     {% endif %}
                 {% endfor %}
             {% endfor %}
-            {# {{ form_row(resuilItemForm.id) }} #}
         {% endfor %}
-
-        {# {% for resuilItemForm in form.resultItems %}
-            {{ form_row(resuilItemForm.id) }}
-        {% endfor %} #}
-        {# {% for questionForm in form.quiz.questions %}
-            <h2>{{ questionForm.vars.data.content }}</h2>
-            {% for questionAnswerForm in questionForm.questionAnswer %}
-                {% for resultItemForm in questionAnswerForm.resultItems %}
-                    {{ form_row(resultItemForm.id) }}
-                {% endfor %}
-            {% endfor %}
-        {% endfor %} #}
-
-
-{# {% for questionForm in form.quiz.questions %}
-    <h2>{{ questionForm.vars.data.content }}</h2>
-{% endfor %} #}
-        {# <input type="hidden" id="result_quiz" name="result[quiz]" value="{{ mathTest.quiz.id }}">
-
-        {% for question in mathTest.quiz.questions %}
-            <h2>{{ question.content }}</h2>
-            {% for questionAnswer in question.questionAnswers %}
-                <input type="checkbox" id="{{ questionAnswer.id }}" name="result_result_item[cheked][]" value="{{ questionAnswer.id }}">
-                <label for="{{ questionAnswer.id }}">{{ questionAnswer.answer.content }}</label><br>
-            {% endfor %}
-        {% endfor %}
-
-        <button type="submit">Отправить</button> #}
+        <button type="submit">Отправить</button>
         {{ form_end(form) }}
     {% endif %}
 </div>
