--- a/templates/math_test/result.html.twig
+++ b/templates/math_test/result.html.twig
@@ -31,6 +31,6 @@
         {% endif %}
     {% endif %}
 
-    <a href="{{ path('app_math_test') }}">Пройти новый тест.</a>
+    <a href="{{ path('index') }}">Пройти новый тест.</a>
 </div>
 {% endblock %}
